--- a/ftpcube.desktop
+++ b/ftpcube.desktop
@@ -3,7 +3,7 @@ Name=FtpCube
 Comment=FtpCube FTP client
 Comment[pl]=FtpCube, klient FTP
 Exec=ftpcube
-Icon=ftpcube.png
+Icon=ftpcube.xpm
 Terminal=0
 Type=Application
 Categories=Application;Network;
