--- a/ftpcube.desktop
+++ b/ftpcube.desktop
@@ -4,7 +4,7 @@ Comment=FtpCube FTP client
 Comment[pl]=FtpCube, klient FTP
 Exec=ftpcube
 Icon=ftpcube.xpm
-Terminal=0
+Terminal=false
 Type=Application
 Categories=Application;Network;
 # vi: encoding=utf-8
