--- a/ftpcube.desktop
+++ b/ftpcube.desktop
@@ -7,5 +7,5 @@ Exec=ftpcube
 Icon=ftpcube.xpm
 Terminal=false
 Type=Application
-Categories=Application;Network;
+Categories=Network;FileTransfer;
 # vi: encoding=utf-8
