- no ext for icon
Changed files:
    ftpcube.desktop -> 1.6

--- a/ftpcube.desktop
+++ b/ftpcube.desktop
@@ -4,7 +4,7 @@ Name=FtpCube
 Comment=FtpCube FTP client
 Comment[pl]=FtpCube, klient FTP
 Exec=ftpcube
-Icon=ftpcube.xpm
+Icon=ftpcube
 Terminal=false
 Type=Application
 Categories=Network;FileTransfer;
